; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/ti/extr_knav_qmss_queue.c_knav_queue_set_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/ti/extr_knav_qmss_queue.c_knav_queue_set_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knav_queue_inst = type { %struct.knav_range_info* }
%struct.knav_range_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.knav_queue_inst*, i32)* @knav_queue_set_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @knav_queue_set_notify(%struct.knav_queue_inst* %0, i32 %1) #0 {
  %3 = alloca %struct.knav_queue_inst*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.knav_range_info*, align 8
  store %struct.knav_queue_inst* %0, %struct.knav_queue_inst** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.knav_queue_inst*, %struct.knav_queue_inst** %3, align 8
  %7 = getelementptr inbounds %struct.knav_queue_inst, %struct.knav_queue_inst* %6, i32 0, i32 0
  %8 = load %struct.knav_range_info*, %struct.knav_range_info** %7, align 8
  store %struct.knav_range_info* %8, %struct.knav_range_info** %5, align 8
  %9 = load %struct.knav_range_info*, %struct.knav_range_info** %5, align 8
  %10 = getelementptr inbounds %struct.knav_range_info, %struct.knav_range_info* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = icmp ne %struct.TYPE_2__* %11, null
  br i1 %12, label %13, label %30

13:                                               ; preds = %2
  %14 = load %struct.knav_range_info*, %struct.knav_range_info** %5, align 8
  %15 = getelementptr inbounds %struct.knav_range_info, %struct.knav_range_info* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)*, i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)** %17, align 8
  %19 = icmp ne i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %13
  %21 = load %struct.knav_range_info*, %struct.knav_range_info** %5, align 8
  %22 = getelementptr inbounds %struct.knav_range_info, %struct.knav_range_info* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)*, i32 (%struct.knav_range_info*, %struct.knav_queue_inst*, i32)** %24, align 8
  %26 = load %struct.knav_range_info*, %struct.knav_range_info** %5, align 8
  %27 = load %struct.knav_queue_inst*, %struct.knav_queue_inst** %3, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 %25(%struct.knav_range_info* %26, %struct.knav_queue_inst* %27, i32 %28)
  br label %30

30:                                               ; preds = %20, %13, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
